style.css
@import url("https://fonts.googleapis.com/css2?family=Sora:wght@200;300;400;700&display=swap");

@font-face {
  font-family: "Radwave Demo";
  src: url("fonts/RadwaveDemoRegular.woff2") format("woff2"),
    url("fonts/RadwaveDemoRegular.woff") format("woff");
  font-weight: normal;
  font-style: normal;
  font-display: swap;
}

html {
  scroll-behavior: smooth;
}

h1 {
  font-family: "Radwave Demo";
  font-size: 40px;
}

h2 {
  font-family: "Sora", sans-serif;
  font-weight: 300;
  font-size: 25px;
}

p {
  font-family: "Sora", sans-serif;
  font-size: 16px;
  font-weight: 400;
}

.bold {
  font-weight: 700;
}

.green-font {
  color: #65da8c;
}

.white-font {
  color: #f8f7f4;
}

.tiny-font {
  font-size: 14px;
}

a {
  font-family: "Sora", sans-serif;
  font-size: 16px;
  color: #f8f7f4;
  text-decoration: none;
}

.button-frame {
  width: 165px;
  height: 55px;
  position: relative;
  border: 3px solid #00171f;
  top: -10px;
  left: -10px;
  cursor: pointer;
}

.orange-button {
  font-family: "Sora";
  font-weight: 600;
  font-size: 18px;
  color: #f8f7f4;
  height: 60px;
  width: 170px;
  position: absolute;
  background-color: #ff7517;
  margin: 7px;
  border: none;
  cursor: pointer;
}

.green-button {
  font-family: "Sora";
  font-weight: 600;
  font-size: 18px;
  color: #00171F;
  height: 60px;
  width: 170px;
  position: absolute;
  background-color: #65DA8C;
  margin: 7px;
  border: none;
  cursor: pointer;
}

/* hero styling */

@property --num {
  syntax: "<integer>";
  initial-value: 0;
  inherits: false;
}

.hero {
  background: url(images/hero.jpg) no-repeat;
  z-index: 0;

}

@media screen and (max-height: 900px) {
  .hero {
    background: url(images/Hero-900h.jpg) no-repeat;
    z-index: 0;
  }
}

.hero-header {
  grid-column: 60/89;
  grid-row: 31/36;
  letter-spacing: 3px;
}

.hero-text {
  grid-column: 68/89;
  grid-row: 41/60;
}

.hero-specs {
  display: flex;
  background-color: transparent;
  width: 100%;
  height: 100%;
  grid-column: 1/90;
  grid-row: 70/90;
}

.spec-container {
  text-align: center;
  font-weight: 200;
  font-size: 20px;
  flex: 0 100%;
  height: 100px;
  margin-bottom: 2%; /* (100-32*3)/2 */
}

.specs-heading {
  font-family: "Radwave Demo";
  font-size: 38px;
  top: 20px;
  left: 10px;
  position: absolute;
  padding-left: 18px;
}

.spec-info {
  top: 2.8em;
  left: 10px;
  font-size: 25px;
  position: absolute;
  padding-left: 18px;
}
.acceleration {
  height: 5em;
}
.speed {
  height: 5em;
  font-weight: 300;
  font-size: 48px;
}
.seconds {
  height: 5em;
  font-weight: 300;
  font-size: 48px;
}
.count {
  align-content: center;
  justify-content: center;
  animation: counter 5s alternate ease-in-out;
  counter-reset: num var(--num);
  animation-fill-mode: forwards;
  display: inline;
  max-width: 200px;
  font-weight: 300;
  font-size: 48px;
}
.count::after {
  content: counter(num);
}

@keyframes counter {
  from {
    --num: 0;
  }
  to {
    --num: 220;
  }
}
/* end of hero styling */

.spec-one img {
  height: 100%;
  width: 480px;
}

.spec-two img {
  height: 100%;
  width: 480px;
}

.spec-three img {
  height: 100%;
  width: 480px;
}

.card-one {
  height: 356px;
}

.card-two {
  width: 100%;
  height: 356px;
}

.quote-mark {
  position: absolute;
  top: 5px;
  left: 350px;
  display: inline;
  color: #65da8c;
  font-size: 100px;
  margin: 0;
}
.quote {
  font-weight: 800;
  font-size: x-large;
  position: absolute;
  bottom: 90px;
  right: 60px;
  display: inline;
  width: 240px;
}

.one {
  width: 280px !important;
  right: 45px !important;
}

.source {
  position: absolute;
  bottom: 20px;
  right: 15px;
  display: inline;
}

.position {
  position: absolute;
  bottom: 5px;
  right: 15px;
  display: inline;
  font-size: small;
}
.driving-info {
  font-family: "Radwave Demo";
  color: #f8f7f4;
  font-weight: 800;
  font-size: 36px;
  width: 40%;
  left: 35px;
}
.info-text {
  color: #f8f7f4;
  width: 40%;
  left: 700px;
  padding: 20px;
}

.info-text-two span {
  font-weight: 600;
  font-size: 25px;
}

/* footer styling */

footer {
  background-color: #00171f;
  padding-left: 8%;
  line-height: 2.5;
  align-items: column;
  justify-content: column;
  position: relative;
  overflow: hidden;
}
footer:after {
  content: "";
  position: absolute;
  left: -130px;
  margin: -20px;
  width: 550px;
  height: 300px;
  transform: rotate(20deg);
  background-color: #65da8c; /* to see where it is */
}

.foot-title {
  width: 270px;
  height: 65px;
  margin: 0;
}
.foot-space {
  align-items: column;
  justify-content: column;
  justify-content: space-between;
  color: #f8f7f4;
  position: relative;
}
.foot-section {
  padding: 0;
  padding-left: 3%;
}

.foot-section-bottom {
  padding: 0;
  padding-left: 3%;
  padding-bottom: 10%;
  margin-bottom: 10%;
}
.foot-info {
  font-size: 24px;
  font-weight: 500;
  margin: 0;
  padding: 0;
}

.prize-info {
  line-height: 1.5;
  padding-left: 10%;
  margin: 0;
  width: 40vh;
}
.button-frame-foot {
  width: 165px;
  height: 55px;
  position: relative;
  border: 3px solid #F3F1F1;
  top: -10px;
  left: -10px;
  cursor: pointer;

}



/* enf of foot styling  */

/* bouncy arrows */

.iconify {
  z-index: 9;
  height: 50px;
  width: 50px;
  grid-column: 84/90;
  grid-row: 73/90;
  position: relative;
  z-index: -1;
}

.bounce {
  display: inline-block;
  position: relative;
  -moz-animation: bounce 0.5s infinite linear;
  -o-animation: bounce 0.5s infinite linear;
  -webkit-animation: bounce 0.5s infinite linear;
  animation: bounce 0.5s infinite linear;
}

@-webkit-keyframes bounce {
  0% {
    top: 0;
  }
  50% {
    top: -0.2em;
  }
  70% {
    top: -0.3em;
  }
  100% {
    top: 0;
  }
}
@-moz-keyframes bounce {
  0% {
    top: 0;
  }
  50% {
    top: -0.2em;
  }
  70% {
    top: -0.3em;
  }
  100% {
    top: 0;
  }
}
@-o-keyframes bounce {
  0% {
    top: 0;
  }
  50% {
    top: -0.2em;
  }
  70% {
    top: -0.3em;
  }
  100% {
    top: 0;
  }
}
@-ms-keyframes bounce {
  0% {
    top: 0;
  }
  50% {
    top: -0.2em;
  }
  70% {
    top: -0.3em;
  }
  100% {
    top: 0;
  }
}
@keyframes bounce {
  0% {
    top: 0;
  }
  50% {
    top: -0.2em;
  }
  70% {
    top: -0.3em;
  }
  100% {
    top: 0;
  }
}

/* end of bouncy arrows */

/* video */
video {
  height: 100%;
  width: 100%;
  position: relative;
}
/* end video */

.bike-color-picker span {
  margin-left: 0.5em;
  margin-right: 2em;
  text-align: left;
}

/* bike exterior color picker */

.button-exterior-black {
  background-color: #363434;
  border-style: none;
  width: 50px;
  height: 50px;
  margin: 10px 10px 10px 10px;
  cursor: pointer;
  vertical-align: middle;
}

.button-exterior-white {
  background-color: #fbfaf9;
  border-style: none;
  width: 50px;
  height: 50px;
  margin: 10px 10px 10px 10px;
  cursor: pointer;
  vertical-align: middle;
}

.button-exterior-orange {
  background-color: #ff7517;
  border-style: none;
  width: 50px;
  height: 50px;
  margin: 10px 10px 10px 10px;
  cursor: pointer;
  vertical-align: middle;
}

.bike-color .bike-color-picker {
  min-width: 200px;
  display: block;
  height: 102px;
  line-height: 102px;
  color: #fbfaf9;
}

.bike-color img {
  width: 100vw;
  height: auto;
}

/*end bike exterior color picker */
.bike-color-picker{
  background-color: #00171f;
}
/* bike interior color picker */

.button-interior-black {
  background-color: #363434;
  border-style: none;
  width: 50px;
  height: 50px;
  margin: 10px 10px 10px 10px;
  cursor: pointer;
  vertical-align: middle;
}

.button-interior-white {
  background-color: #fbfaf9;
  border-style: none;
  width: 50px;
  height: 50px;
  margin: 10px 10px 10px 10px;
  cursor: pointer;
  vertical-align: middle;
}

.button-interior-orange {
  background-color: #ff7517;
  border-style: none;
  width: 50px;
  height: 50px;
  margin: 10px 10px 10px 10px;
  cursor: pointer;
  vertical-align: middle;
}

.interior-color .bike-color-picker {
  min-width: 200px;
  display: block;
  height: 102px;
  line-height: 102px;
  color: #fbfaf9;
}

.interior-color img {
    width: 100vw;
    height: auto;
}

/*end bike interior color picker */

.sign-up h2 {
  font-family: 'Radwave Demo';
  font-size: 25px;
  font-weight: 400;
  line-height: 30px;
  margin-left: 30px;
}

.sign-up p {
  font-size: 16px;
  font-weight: 400;
  line-height: 23px;
  margin-left: 30px;
}

.sign-up-pitch {
  grid-column: 1/1;
  word-wrap: break-word;
  width: 866px;
}

.sign-up-text{
  margin-right: 300px;
}

.sign-up h3 {
  margin-left: 30px;
}

.sign-up form {
margin-left: 30px;
}

.sign-up .email {
  font-size: 18px;
  width: 429px;
  height: 50px;
  margin-bottom: 15px;
  border-style: solid;
  border-color: black;
  border-width: 3px;
}

input {
  font-style: "Sora";
  color: #c9cdcd;
  padding-left: 20px;
}

.sign-up .button-frame {
  position: absolute;
  margin-left: 520px;
  top: 379px;
}


@media screen and (min-width: 769px) {

  .bike-color img {
    width: 100%;
    height: auto;
  }

  .interior-color img {
    width: 100%;
    height: auto;
  }

  .bike-color-picker span {
    margin-left: 1em;
    font-size: 24px;
  }


  .sign-up h2 {
    font-size: 44px;
    line-height: 46px;
  }

  .sign-up p {
    font-size: 18px;
  }

  .sign-up h3 {
    font-size: 25px;
  }

  .sign-up button {
    width: 180px;
    box-shadow: none;
  }


.merch{
  position: relative;
}

.merch picture{
  position: absolute;
  z-index: -1;
}
  .smoove-collection{
    grid-column: 1/1;
    grid-row: 4/4;
    margin-left: 100px;
    width: 500px;
    z-index: 1;
  }
  .smoove-collection h3{
    font-family: 'Radwave Demo';
    font-size: 44px;
    margin-bottom: 20px;
  }

  .smoove-collection p{
    font-size: 18px;
    margin-top: 0;
    margin-bottom: 0;
  }

  .smoove-collection .button-frame{
  float: right;
  margin-top: 10px;
  margin-bottom: 25px;
  }
  
  .sign-up-flex{
    position: relative;
    height: 630px;
    display: flex;
    flex-direction: row;
    max-width: 1440px;
  }


  footer{
    padding-left: 15px;
  }

  .foot-space {
    display: flex;
    align-items: row;
    justify-content: space-between;
    padding-top: 3%;
    padding-left: 5%;
    padding-right: 10%;
    color: #f8f7f4;
    padding-bottom: 5%;
  }
  .foot-info {
    font-size: 32px;
    font-weight: 500;
    margin-top: 0;
  }
  .prize-info {
    line-height: 1.5;
    padding-left: 10%;
    margin: 0;
    width: 25vh;
  }
  footer {
    background-color: #00171f;
    padding-left: 8%;
    line-height: 2.5;
    align-items: column;
    justify-content: column;
    position: relative;
    overflow: hidden;
  }
  footer:after {
    left: -100px;
    margin: -20px;
    width: 700px;
    height: 300px;
  }
}

